typescript/checker/tests/conformance/parser/ecmascript5/Statements/ReturnStatements/parserReturnStatement4.ts.stderr
error: TS1056
 --> $DIR/tests/conformance/parser/ecmascript5/Statements/ReturnStatements/parserReturnStatement4.ts:1:15
  |
1 | var v = { get foo() { return } };
  |               ^^^

